--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.1.0",
+    "@supabase/ui": "^0.36.5",
     "@types/node": "18.11.9",
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.2",
