--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "NEXTJS-SUPABASE-SAMPLE",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.1.0",
+    "@supabase/supabase-js": "^1.22.6",
     "@supabase/ui": "^0.36.5",
     "@types/node": "18.11.9",
     "@types/react": "17.0.2",
@@ -19,6 +19,7 @@
     "next": "12.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.4",
     "typescript": "4.8.4"
   },
   "devDependencies": {
