--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
     "@supabase/supabase-js": "^1.22.6",
     "@supabase/ui": "^0.36.5",
     "@types/node": "18.11.9",
@@ -16,6 +17,7 @@
     "@types/react-dom": "17.0.2",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "moji": "^0.5.1",
     "next": "12.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,6 +25,7 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/moji": "^0.5.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
